# yukikaze.tech

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  _redirects  next.config.js  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
contexts/: authentication.tsx  discordPack.tsx
pages/: _app.tsx  _document.tsx  guilds.tsx  index.tsx  markdown.tsx  privacy.tsx
pages/api/: stats.ts
pages/guild/: [...id].tsx
pages/oauth/: callback.tsx  guild.tsx  logout.tsx
public/: manifest.json  sw.js.map
public/js/: script.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
styles/: modesta.css  modesta.scss  normalize.css  normalize.scss  nprogress.scss  style.css  style.scss  typist.scss
utils/: apiFetch.ts  iconUrl.ts  inviteUrl.ts  oauthUrl.ts  regex.ts  state.ts
